kyverno/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    owner: novabank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
